# cmake_usage

./: README.md
hello_cmake/: CMakeLists.txt
hello_cmake/project/: CMakeLists.txt
hello_cmake/project/include/: hello_cmake.hpp
hello_cmake/project/src/: hello_cmake.cpp
loop_each_file_generate_target/: CMakeLists.txt
visual_studio_2017_x64_command_issue/: issue.txt  vcvars64.bat
